infra/mailhog/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  selector: {}
  template:
    spec:
      serviceAccountName: mailhog
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: mailhog
          image: "docker.io/mailhog/mailhog:v1.0.1"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 8025
              protocol: TCP
            - name: tcp-smtp
              containerPort: 1025
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: tcp-smtp
            initialDelaySeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            tcpSocket:
              port: tcp-smtp
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
          resources:
            {}
