infra/mailhog/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  type: "ClusterIP"
  ports:
    - name: http
      port: 8025
      protocol: TCP
      targetPort: http
    - name: tcp-smtp
      port: 1025
      protocol: TCP
      targetPort: tcp-smtp
  selector: {}
