infra/mailhog/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  defaultBackend:
    service:
      name: mailhog
      port:
        name: http
  tls:
    - secretName: mailhog-tls
      hosts:
        - mail.localhost.com
  rules:
    - host: mail.localhost.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  name: http
